[common] fix: added text-align css fix (#1504)

--- a/packages/common/web/statics/styles/draftDefault.rtlignore.scss
+++ b/packages/common/web/statics/styles/draftDefault.rtlignore.scss
@@ -33,6 +33,7 @@
   .public-DraftStyleDefault-list-ltr {
     /*!rtl:begin:ignore*/
     direction: ltr;
+    text-align: left;
     /*!rtl:end:ignore*/
   }
   .public-DraftStyleDefault-list-rtl {
